feat: 第一个组件

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
+  "homepage":"",
   "private": true,
-  "name": "dumi_v2",
+  "name": "goldFish",
   "version": "1.0.0",
   "scripts": {
     "start": "dumi dev",
